// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChromeNavItem should render navigation  1`] = `
<div>
  <div
    class="chr-c-app-title"
  >
    Nav title
  </div>
  <nav
    aria-label="Insights Global Navigation"
    class="pf-v6-c-nav pf-m-scrollable"
    data-ouia-component-id="SideNavigation"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    />
  </nav>
</div>
`;

exports[`ChromeNavItem should render navigation loader if schema was not loaded 1`] = `
<div>
  <section
    class="chr-c-app-switcher--loading"
  >
    <div
      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
    >
      <span
        class="pf-v6-screen-reader"
      />
    </div>
  </section>
  <nav
    aria-label="Insights Global Navigation"
    class="pf-v6-c-nav"
    data-ouia-component-id="SideNavigation"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="false"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-1"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#"
        >
          <div
            class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-2"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#"
        >
          <div
            class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-3"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#"
        >
          <div
            class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-4"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#"
        >
          <div
            class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
